@@ -7,6 +7,7 @@ Revision history for AM-Algorithm
     Removed separate support for "short" and "long" outcomes
     Changed add_test and add_data to accept spec last
     Required user to input Project objection to AM constructor
+    Removed format variables and changed to Text::Table
 2.45      2014-02-11 21:27:02 America/Los_Angeles
     Fixed gang/grandtotal calculation bugs
     removed debug print statements!
